fixed z-index

--- a/src/App.css
+++ b/src/App.css
@@ -124,20 +124,17 @@ Navbar Styles
   border-radius: 50%;
   border: solid 1px rgb(14, 0, 141);
   cursor: pointer;
-  position: relative;
   user-select: none;
 }
 
 .log-menu {
-  z-index: 5;
   position: absolute;
-  top: 45px;
-  right: 10px;
-  background: #fff;
+  top: 65px;
+  right: 30px;
   height: 110px;
   width: 170px;
   text-align: center;
-  color: #fff;
+  color: #000;
   background: rgba(255, 255, 255, 0.55);
   box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
   backdrop-filter: blur(7px);
@@ -170,8 +167,7 @@ Landing styles
 .landing-section {
   background: rgba(255, 255, 255, 0.11);
   box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
-  backdrop-filter: blur(11.5px);
-  -webkit-backdrop-filter: blur(11.5px);
+  background: rgba(255, 255, 255, 0.5);
   border-radius: 10px;
   padding: 1rem;
   margin-left: 1rem;
